# adk_multi_agent_systems

./: .gitignore  GEMINI.md  Makefile  README.md  Untitled_Document_1  callback_logging.py  deployment_metadata.json  pyproject.toml  requirements.txt  starter_pack_README.md  starter_pack_pyproject.toml
.backup_adk_multi_agent_systems_20251203_155551/: README.md  pyproject.toml  requirements.txt
.backup_adk_multi_agent_systems_20251203_155551/llm_news_agents/: agent.py  agent_deployment.ipynb
.backup_adk_multi_agent_systems_20251203_155551/llm_news_agents/sub_agents/news_editor/: agent.py
.backup_adk_multi_agent_systems_20251203_155551/llm_news_agents/sub_agents/news_researcher/: __init__.py  prompt.py
.backup_adk_multi_agent_systems_20251203_155551/utils/: utils.py
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
apps/: context_ai.py
deployment/terraform/: build_triggers.tf  variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
llm_news_agents/: agent.py  agent_engine_app.py
llm_news_agents/app_utils/: .requirements.txt  deploy.py  telemetry.py  typing.py
llm_news_agents/sub_agents/investigative_journalist/: __init__.py  agent.py  prompt.py
llm_news_agents/sub_agents/news_editor/: __init__.py  agent.py  prompt.py
llm_news_agents/sub_agents/news_researcher/: agent.py  prompt.py
tests/integration/: test_agent.py  test_agent_engine_app.py
